--- a/initializer-generator/src/main/resources/templates/codes/sca-nacos-config/resources/application.properties.mustache
+++ b/initializer-generator/src/main/resources/templates/codes/sca-nacos-config/resources/application.properties.mustache
@@ -7,4 +7,4 @@ spring.cloud.nacos.config.contextPath=/nacos
 spring.cloud.nacos.config.server-addr=mse-6d50f4f0-p.nacos-ans.mse.aliyuncs.com:8848
 # Nacos 配置中心的namespace。需要注意，如果使用 public 的 namcespace ，请不要填写这个值，直接留空即可
 # spring.cloud.nacos.config.namespace=
-
+spring.config.import=nacos:nacos-config-example.properties?refresh=true
