fix component code templates problem

--- a/initializer-generator/src/main/resources/templates/codes/sca-nacos-discovery/java/EchoService.java.mustache
+++ b/initializer-generator/src/main/resources/templates/codes/sca-nacos-discovery/java/EchoService.java.mustache
@@ -14,16 +14,15 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package {{basePackage}}.nacosconfig;
+package {{basePackage}}.demos.nacosdiscoveryconsumer;
 
-import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
-import org.springframework.cloud.client.discovery.EnableDiscoveryClient;
-import org.springframework.context.annotation.Configuration;
+import org.springframework.cloud.openfeign.FeignClient;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 
-/**
- * @author <a href="mailto:chenxilzx1@gmail.com">theonefx</a>
- */
-@EnableAutoConfiguration
-@Configuration
-public class NacosConfigConfiguration {
+@FeignClient("nacos-service") // 指向服务提供者应用
+public interface EchoService {
+
+    @GetMapping("/echo/{message}")
+    String echo(@PathVariable("message") String message);
 }
