--- a/initializer-generator/src/main/resources/templates/codes/sca-nacos-discovery/java/RestTemplateController.java.mustache
+++ b/initializer-generator/src/main/resources/templates/codes/sca-nacos-discovery/java/RestTemplateController.java.mustache
@@ -14,15 +14,32 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package {{basePackage}}.demos.nacosdiscoveryconsumer;
+ package {{basePackage}}.demos.nacosdiscoveryconsumer;
 
-import org.springframework.cloud.openfeign.FeignClient;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cloud.client.loadbalancer.LoadBalanced;
+import org.springframework.context.annotation.Bean;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.client.RestTemplate;
 
-@FeignClient("nacos-discovery-provider-sample") // 指向服务提供者应用
-public interface EchoService {
+@RestController
+public class RestTemplateController {
 
-    @GetMapping("/echo/{message}")
-    String echo(@PathVariable("message") String message);
+    @LoadBalanced
+    @Autowired
+    public RestTemplate restTemplate;
+
+    @LoadBalanced
+    @Bean
+    public RestTemplate restTemplate() {
+        return new RestTemplate();
+    }
+
+    @GetMapping("/call/echo/{message}")
+    public String callEcho(@PathVariable String message) {
+        // 访问应用 nacos-service 的 REST "/echo/{message}"
+        return restTemplate.getForObject("http://nacos-service/echo/" + message, String.class);
+    }
 }
