--- a/initializer-generator/src/main/resources/templates/codes/sca-nacos-discovery/resources/application.properties.mustache
+++ b/initializer-generator/src/main/resources/templates/codes/sca-nacos-discovery/resources/application.properties.mustache
@@ -1,4 +1,5 @@
 # Nacos帮助文档: https://nacos.io/zh-cn/docs/concepts.html
+spring.application.name=nacos-service
 # Nacos认证信息
 spring.cloud.nacos.discovery.username=nacos
 spring.cloud.nacos.discovery.password=nacos
