--- a/initializer-generator/src/main/resources/templates/codes/web/resources/static/index.html.mustache
+++ b/initializer-generator/src/main/resources/templates/codes/web/resources/static/index.html.mustache
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1>hello word!!!</h1>
+        <h1>hello world!!!</h1>
         <p>this is a html page</p>
     </body>
 </html>
